--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <a href="https://people.eecs.berkeley.edu/~malik/">Jitendra Malik</a>,
               <a href="http://zsdonghao.github.io/">Hao Dong</a>
               <br>
-              <em>In Submission to RSS 2025</em>
+              <em>Under Review</em>
               <br>
               <!-- <a href="https://et-seed.github.io/">project page</a> -->
                project page (coming soon)
@@ -140,7 +140,7 @@
               Hamed Haddadi, 
               Emine Yilmaz
               <br>
-              <em>In Submission to ICML 2025</em>
+              <em>Under Review</em>
               <br> 
               <a href="https://trust-rag.github.io/">project page</a>
               /
@@ -185,7 +185,7 @@
               Jiarui Wang
               <a href="http://zsdonghao.github.io/">Hao Dong</a>
               <br>
-              <em>In Submission to CVPR 2025</em>
+              <em>Under Review</em>
               <br> 
               <!-- <a href="https://et-seed.github.io/">project page</a> -->
                project page (coming soon)
