--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Yue Chen</title>
+  <title>Yue Chen (陈越)</title>
   
   <meta name="author" content="Yue Chen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,6 +32,7 @@
                 Email: yuechen020614 [at] gmail.com 
               </p>
               <p style="text-align:center">
+                <a href="images/YueChen_Resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="mailto:yuechen020614@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=v8ehFSQAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/Cold114514">Github</a>
@@ -392,14 +393,20 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
-              <heading>Services</heading>
+              <heading>Reviewer Services</heading>
             </td>
           </tr>
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="75%" valign="center">
-              Reviewer: ICLR, ICML, AAAI
+              
+              International Conference on Learning Representations (ICLR), 2025
+              <br>
+              International Conference on Machine Learning (ICML), 2025
+              <br>
+              AAAI Conference on Artificial Intelligence (AAAI), 2024, 2025
+
               <br>
               <!-- Volunteer: <a href="images/wine2020.pdf">WINE <em>2020</em></a> -->
             </td>
@@ -495,7 +502,7 @@
               <br>
                   <div style="float:right;">
                     Website template comes from <a href="https://jonbarron.info/">Jon Barron</a><br>
-                      Last update: October, 2024
+                      Last update: February, 2025
                   </div>
             </td>
           </tr>
