--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               Jiarui Wang
               <a href="http://zsdonghao.github.io/">Hao Dong</a>
               <br>
-              <em>Under Review</em>
+              <em>CVPR 2025</em>
               <br> 
               <!-- <a href="https://et-seed.github.io/">project page</a> -->
                project page (coming soon)
@@ -195,8 +195,8 @@
               <!-- <a href="https://arxiv.org/abs/2411.03990">paper</a> -->
              <!-- paper (coming soon) -->
               /
-              <!-- <a href="https://github.com/Cold114514/ET-SEED">code</a> -->
-             code (coming soon)
+              <a href="https://github.com/AlwaySleepy/Garment-Pile">code</a>
+             <!-- code (coming soon) -->
               /
              video (coming soon)
               <!-- <a href="https://et-seed.github.io/static/videos/ET-SEED_sup_video.mp4">video</a> -->
