--- a/index.html
+++ b/index.html
@@ -188,17 +188,15 @@
               <br>
               <em>CVPR 2025</em>
               <br> 
-              <!-- <a href="https://et-seed.github.io/">project page</a> -->
-               project page (coming soon)
+              <a href="https://garmentpile.github.io/">project page</a>
+               <!-- project page (coming soon) -->
               /
-              paper (coming soon)
-              <!-- <a href="https://arxiv.org/abs/2411.03990">paper</a> -->
+              <!-- paper (coming soon) -->
+              <a href="https://arxiv.org/abs/2503.09243">paper</a>
              <!-- paper (coming soon) -->
               /
               <a href="https://github.com/AlwaySleepy/Garment-Pile">code</a>
              <!-- code (coming soon) -->
-              /
-             video (coming soon)
               <!-- <a href="https://et-seed.github.io/static/videos/ET-SEED_sup_video.mp4">video</a> -->
               <p></p>
               <p> We study the novel task of cluttered garments manipulation using dense visual affordance, with generalization towards diverse states, and propose a novel adaptation module to reorganize cluttered garments into configurations conducive to manipulation. </p>
