--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                   <td style="padding-top: 0px; padding-bottom: 10px; padding-left: 20px; padding-right: 20px; width:100%; vertical-align:middle">
                     <h2><b>News</b></h2>
                     <ul class="news-list">
-                      <li> [2025/09] 🎉 DexGarmentLab has been accepted to NeurIPS 2025 as <strong style="color: red;">Spotlight</strong>! </li>
-                      <li> [2025/08] 🎉 ExeCoder has been accepted to EMNLP 2025 as <strong style="color: red;">oral presentation</strong>! </li>
+                      <li> [2025/09] 🎉 DexGarmentLab has been accepted to NeurIPS 2025 as <strong style="color: red;">Spotlight Presentation</strong>! </li>
+                      <li> [2025/08] 🎉 ExeCoder has been accepted to EMNLP 2025 as <strong style="color: red;">Oral Presentation</strong>! </li>
                       <li> [2025/06] 🎉 Started my internship at ByteDance Seed Robotics Lab</li>
                       <li> [2025/02] 🎉 Garment-Pile has been accepted to CVPR 2025 </li>
                       <li> [2025/02] 🎉 Started my internship at Microsoft Research Asia </li>
