--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
                     <div class="TLDR">
                       <strong>TL;DR:</strong>
-                      We propose DUET, a closed-loop framework for joint exploration of user-item textual profiles in recommendation systems. It distills raw data into concise cues, expands them into rich profiles via self-prompt construction, and optimizes profiles jointly with reinforcement learning (GRPO) using downstream recommendation feedback—outperforming baselines on Amazon Music/Book and Yelp datasets, while enabling interpretable LLM-compatible representations.
+                      We propose DUET, a closed-loop framework for joint exploration of user-item textual profiles in recommendation systems. It distills raw data into concise cues, expands them into rich profiles via self-prompt construction, and optimizes profiles jointly with reinforcement learning using downstream recommendation feedback, while enabling interpretable LLM-compatible representations.
                     </div>
                   </td>
                 </tr>
