--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     
                     <div class="TLDR">
                       <strong>TL;DR:</strong>
-                      We introduce ExeCoder, a code translation framework that equips large language models (LLMs) with explicit "executability representation." It models code properties like syntax validity, runtime dependency, and type consistency as structured features, fusing them into the translation process to generate more accurate, runnable code across programming languages (e.g., Python ↔ Java, C++ ↔ Rust).
+                      We introduce ExeCoder, an LLM specifically designed for code translation, aimed at utilizing executability representations such as functional semantics, syntax structures, and variable dependencies to enhance the capabilities of LLMs in code translation.
                     </div>
                   </td>
                 </tr>
@@ -362,7 +362,7 @@
                     
                     <div class="TLDR">
                       <strong>TL;DR:</strong>
-                      We propose WarriorMath, a defect-aware framework to enhance large language models' (LLMs) mathematical reasoning ability. It first detects potential defects in intermediate calculation steps via a specialized detector, then performs targeted correction and iterative refinement—significantly improving accuracy on complex math tasks such as arithmetic reasoning, algebraic problem-solving, and numerical optimization.
+                      We propose WarriorMath, a defect-aware framework for mathematical problem solving that integrates both targeted data synthesis and progressive training.
                     </div>
                   </td>
                 </tr>
