--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
                     alt="profile photo" 
                     src="images/yuechen.JPG" 
                     class="hoverZoomLink">
-                  </td>
+                    <!-- 新增：照片拍摄者文字及超链接 -->
+                    <p style="margin: 8px 0 0; font-size: 14px; color: #555;">
+                        Picture taken by 
+                        <a href="https://hemh2120.github.io/" style="color: #2c6ebd; text-decoration: none;" target="_blank">
+                            Minghua He
+                        </a>
+                    </p>
+                </td>
                 </tr>
               </tbody>
             </table>
