--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="profile-image-wrapper">
           <img src="images/yuechen.JPG" alt="Yue Chen" class="profile-img">
-          <p class="photo-credit">Taken by <a href="https://hemh2120.github.io/" target="_blank">Minghua He</a></p>
+          <p class="photo-credit">Picture taken by <a href="https://hemh2120.github.io/" target="_blank">Minghua He</a></p>
         </div>
       </section>
 
