--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       <section class="section news">
         <h2 class="section-title">News</h2>
         <ul class="news-list">
+          <li><span class="date">[2025/11]</span style="flex: 1;"> A3D accepted to AAAI 2026 as <span class="badge oral">Oral</span>! 🎉</li>
+          <li><span class="date">[2025/10]</span style="flex: 1;"> 2nd place in the Multi-terrain Humanoid Locomotion Challenge at the ICCV 2025 Workshop on Human-Robot-Scene Interaction and Collaboration 🎉</li>
           <li><span class="date">[2025/09]</span style="flex: 1;"> DexGarmentLab accepted to  NeurIPS 2025 as <span class="badge spotlight">Spotlight</span>! 🎉</li>
           <li><span class="date">[2025/08]</span style="flex: 1;"> ExeCoder accepted to  EMNLP 2025 as <span class="badge oral">Oral</span>! 🎉</li>
           <li><span class="date">[2025/02]</span style="flex: 1;"> Garment-Pile accepted to CVPR 2025</b> 🎉</li>
@@ -79,6 +81,26 @@
             <div class="venue-tag">Under Review</div>
           </div>
         </div>
+
+        <div class="paper-card first-author">
+          <div class="paper-img">
+            <img src="images/a3d.jpg" alt="A3D: Adaptive Affordance Assembly with Dual-Arm Manipulation">
+          </div>
+          <div class="paper-info">
+            <h3 class="paper-title">A3D: Adaptive Affordance Assembly with Dual-Arm Manipulation</h3>
+            <div class="authors">
+              Jiaqi Liang*, <strong>Yue Chen*</strong>, Qize Yu*, Yan Shen, Haipeng Zhang, Hao Dong, Ruihai Wu†
+            </div>
+            <div class="links">
+              <a href="https://a3d-11011.github.io/">Project</a> / <a href="#">Paper</a> / <a href="https://github.com/a3d-11011/Adaptive-Affordance-Assembly-with-Dual-Arm-Manipulation">Code</a>
+            </div>
+            <div class="venue-line">
+              <span class="venue">AAAI 2026</span>
+              <span class="badge oral"><i class="fa-solid fa-trophy"></i> Oral</span>
+            </div>
+          </div>
+        </div>
+
 
         <div class="paper-card first-author">
           <div class="paper-img">
@@ -162,7 +184,7 @@
             <div class="links">
               <a href="https://trust-rag.github.io/">Project</a> / <a href="https://arxiv.org/pdf/2501.00879">Paper</a> / <a href="https://github.com/HuichiZhou/TrustRAG">Code</a>
             </div>
-            <div class="venue-tag">Under Review</div>
+            <div class="venue-tag">AAAI 2026 Workshop on Trust and Control in Agentic AI (TrustAgent)</div>
           </div>
         </div>
 
